# gemini-rotate

./: pyproject.toml
.github/workflows/: pypi-publish.yml
